# Codice1

./: CMakeLists.txt  ColVector.h  ExamDiPro.mdj  Matriciosamente.h  Matrix.h  MatrixDesigner.h  MatrixStyle.h  ObjoMatrix.h  RectangleMatrix.h  RowVector.h  SimpleMatrix.h  SquareMatrix.h  ValoMatrix.h  filetypes.xml  main.cpp
codestyles/: Default.xml
test/: CMakeLists.txt  MatrixTest.cpp
test/lib/googletest/src/: gtest-port.cc  gtest-printers.cc  gtest.cc
test/lib/googletest/test/: gtest-port_test.cc  gtest-printers_test.cc  gtest_unittest.cc
