cmake_minimum_required(VERSION 3.7)

add_subdirectory(./lib/googletest)
set(gtest_SOURCE_DIR, ./lib/googletest/)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

set(TEST_SOURCE_FILES runAllTests.cpp MatrixTest.cpp)
add_executable(runValoMatrixTests ${TEST_SOURCE_FILES})
target_link_libraries(runValoMatrixTests gtest gtest_main core)